Alteração Redes Sociais Contato

--- a/contato.html
+++ b/contato.html
@@ -85,19 +85,22 @@
     <!-- Rodapé da Página (footer) -->
     <footer>
 
-        <!-- Seção de Contato - Redes Sociais-->
+        <!-- Seção de Contato - Redes Sociais -->
         <section>
 
-            <a href="">
-                <img src="assets/img/linkedin.svg" alt="LinkedIn" />
+            <a href="https://www.linkedin.com/in/carolinafigueiredoo">
+                <img width="70" 
+                height="70" src="assets/img/favicon.svg" alt="LinkedIn" />
+            </a>
+
+            <a href="https://github.com/Carolsfig">
+                <img width="70" 
+                height="70" src="assets/img/favicon.svg" alt="Github" />
             </a>
 
             <a href="">
-                <img src="assets/img/github.svg" alt="Github" />
-            </a>
-
-            <a href="">
-                <img src="assets/img/instagram.svg" alt="Instagram" />
+                <img width="70" 
+                height="70" src="assets/img/favicon.svg" alt="Instagram" />
             </a>
 
         </section>
@@ -107,6 +110,9 @@
         </h3>
 
     </footer>
+
+    <!-- Script JavaScript-->
+    <script src="assets/js/script.js"></script>
 
 </body>
 
