--- a/contato.html
+++ b/contato.html
@@ -21,7 +21,7 @@
     <header>
 
         <!-- Título do cabeçalho -->
-        <h1>Generation Brasil</h1>
+        <h1>Carolina Figueiredo</h1>
 
         <!-- Menu de Navegação -->
         <nav>
@@ -90,23 +90,23 @@
 
             <a href="https://www.linkedin.com/in/carolinafigueiredoo">
                 <img width="70" 
-                height="70" src="assets/img/favicon.svg" alt="LinkedIn" />
+                height="70" src="assets/img/linkedin-icon.png" alt="LinkedIn" />
             </a>
 
             <a href="https://github.com/Carolsfig">
                 <img width="70" 
-                height="70" src="assets/img/favicon.svg" alt="Github" />
+                height="70" src="assets/img/github-logo.png" alt="Github" />
             </a>
 
-            <a href="">
+            <a href="mailto:carolinasfigueiredoo@gmail.com">
                 <img width="70" 
-                height="70" src="assets/img/favicon.svg" alt="Instagram" />
+                height="70" src="assets/img/email-icon.png" alt="Email" />
             </a>
 
         </section>
 
         <h3>
-            Feito com 🧡 por Generation Brasil - 2025
+            Feito com ❤ por Carolina Figueiredo - 2025
         </h3>
 
     </footer>
