--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
 
         <!-- Título do cabeçalho -->
-        <h1>Generation Brasil</h1>
+        <h1>Carolina Figueiredo</h1>
 
         <!-- Menu de Navegação -->
         <nav>
@@ -37,17 +37,28 @@
         <section id="about">
 
             <!-- Título da Seção -->
-            <h2>Sobre a Generation Brasil</h2>
+            <h2>Sobre Carolina Figueiredo </h2>
 
             <article>
 
-                <img width="100" 
-                height="100"
-                src="./assets/img/avatar.png" alt="Foto do criador desse conteúdo" />
+                <img width="200" 
+                height="auto"
+                src="./assets/img/Carolina Foto.jpg" alt="Foto do criador desse conteúdo" />
+
+                <div class="about-text">
+                <p>
+                    Olá! Eu sou a Carolina, estudante de Tecnologia da Informação e Desenvolvedora Full Stack. Tenho experiência prática no desenvolvimento de aplicações completas, atuando tanto no frontend quanto no backend. 
+                </p>
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, tempora. Maxime, mollitia animi! Optio, maxime! Enim, recusandae. Nobis iure incidunt, ab inventore, ea, et soluta odit consequuntur nisi accusamus quidem!
+                    No frontend, trabalho com HTML, CSS, JavaScript, TypeScript, React e Tailwind, criando interfaces responsivas, acessíveis e focadas na experiência do usuário. No backend, desenvolvo APIs REST utilizando Node.js e NestJS, com integração a bancos de dados SQL, aplicando regras de negócio, autenticação e boas práticas de arquitetura.
                 </p>
+
+                <p>
+                    Tenho perfil analítico, aprendizado rápido, organização e proatividade. Gosto de entender o sistema como um todo, colaborar em equipe e evoluir continuamente, buscando entregar soluções tecnológicas bem estruturadas e com impacto real.
+                </p>
+
+                </div>
 
             </article>
            
@@ -86,23 +97,23 @@
 
             <a href="https://www.linkedin.com/in/carolinafigueiredoo">
                 <img width="70" 
-                height="70" src="assets/img/favicon.svg" alt="LinkedIn" />
+                height="70" src="assets/img/linkedin-icon.png" alt="LinkedIn" />
             </a>
 
             <a href="https://github.com/Carolsfig">
                 <img width="70" 
-                height="70" src="assets/img/favicon.svg" alt="Github" />
+                height="70" src="assets/img/github-logo.png" alt="Github" />
             </a>
 
-            <a href="">
+            <a href="mailto:carolinasfigueiredoo@gmail.com">
                 <img width="70" 
-                height="70" src="assets/img/favicon.svg" alt="Instagram" />
+                height="70" src="assets/img/email-icon.png" alt="Email" />
             </a>
 
         </section>
 
         <h3>
-            Feito com ❤ por Generation Brasil - 2025
+            Feito com ❤ por Carolina Figueiredo - 2025
         </h3>
 
     </footer>
